--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -4103,3 +4103,12 @@
     engine: Blink
     engine_version: ""
     family: ""
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; veSt7P28s4; U; en) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.45 Mobile AvastSecureBrowser/6.2.3 Build/3670 Safari/537.36
+  client:
+    type: browser
+    name: Avast Secure Browser
+    version: 6.2.3
+    engine: WebKit
+    engine_version: "537.36"
+    family: Chrome
