--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -4112,3 +4112,12 @@
     engine: WebKit
     engine_version: "537.36"
     family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/96.0.4664.92 Mobile Safari/537.36 webexplorer/4
+  client:
+    type: browser
+    name: Web Explorer
+    version: "4"
+    engine: WebKit
+    engine_version: "537.36"
+    family: Chrome
