--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -9226,3 +9226,21 @@
     model: G03
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Surface Duo) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.55 Mobile Safari/537.36 EdgA/96.0.1054.41
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Microsoft Edge
+    version: 96.0.1054.41
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Microsoft
+    model: Surface Duo
+  os_family: Android
+  browser_family: Internet Explorer
