--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9543,7 +9543,7 @@ KDDI:
 
 # Kodak
 Kodak:
-  regex: 'KODAK|(?:IM5|KD50|Ektra|Smartway_T1|D60LX)(?:[);/ ]|$)'
+  regex: 'KODAK|(?:IM5|KD50|Ektra|Smartway[_ ](?:T1|L2)|D60LX)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'IM5'
@@ -9552,7 +9552,7 @@ Kodak:
       model: 'Seren $1'
     - regex: 'Ektra(?:[);/ ]|$)'
       model: 'Ektra'
-    - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]([LMTX]1|M2|T3)'
+    - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]([LMTX]1|[LM]2|T3)'
       model: 'Smartway $1'
     - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]L1 PRO'
       model: 'Smartway L1 Pro'
