--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -25506,11 +25506,11 @@ KREZ:
 
 # KRIP (https://www.krip.com/)
 KRIP:
-  regex: 'K4m(?:[);/ ]|$)'
+  regex: 'K(?:4m|5m)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'K4m(?:[);/ ]|$)'
-      model: 'K4m'
+    - regex: 'K(4m|5m)(?:[);/ ]|$)'
+      model: 'K$1'
 
 # Kurio or KD Interactive (www.group-kd.com, kdplanet.com)
 Kurio:
