--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -25506,10 +25506,10 @@ KREZ:
 
 # KRIP (https://www.krip.com/)
 KRIP:
-  regex: 'K(?:4m|5[dm]|6b)(?:[);/ ]|$)'
+  regex: 'K(?:4m|5[bdm]|6b)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'K(4m|5[dm]|6b)(?:[);/ ]|$)'
+    - regex: 'K(4m|5[bdm]|6b)(?:[);/ ]|$)'
       model: 'K$1'
 
 # Kurio or KD Interactive (www.group-kd.com, kdplanet.com)
