--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -25647,6 +25647,18 @@ Tambo:
   device: 'smartphone'
   model: '$1'
 
+# Smooth Mobile (https://www.smoothmobile.us/)
+Smooth Mobile:
+  regex: 'Smooth ?(?:5.[05]|626|6.26 Lite|6.5)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Smooth (5.[05]|6.5)(?:[);/ ]|$)'
+      model: 'Smooth $1'
+    - regex: 'Smooth626(?:[);/ ]|$)'
+      model: 'Smooth 6.26'
+    - regex: 'Smooth 6.26 Lite(?:[);/ ]|$)'
+      model: 'Smooth 6.26 Lite'
+
 # Smotreshka
 Smotreshka:
   regex: 'Smotreshka Box (115NA|413NA|213a?)(?:[);/ ]|$)'
